<resources>
    <string name="app_name">HW1</string>
    <string name="title">My Profile</string>
    <string name="intro">My name is James No!</string>
    <string name="programIntro">I am a budding programmer and now I am starting
    \nandroid development!</string>
    <string name="cookingHist">I am an avid fan of the culinary arts, having spent 5
        \n years in the industry, from a line cook to management.</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="dialog_title">What you like?</string>
    <string name="cookies_cake">Cookies or Cake?</string>
    <string name="cookies">COOKIES</string>
    <string name="cake">CAKE</string>
    <string name="onlineTitle">Connection Failed</string>
    <string name="onlineFailed">You are not connected to the internet.</string>
    <string name="okButton">Okay</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

</resources>
